kubernetes/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ead-application
  labels:
    name: ead-application
    environment: production
